Finally fixed issue with cut off headlines in customer login screen (PR#1054).

--- a/var/httpd/htdocs/skins/Customer/default/css/Core.Login.css
+++ b/var/httpd/htdocs/skins/Customer/default/css/Core.Login.css
@@ -35,7 +35,7 @@
 }
 
 #Slider h2 {
-    margin-top: 2px;
+    line-height: 22px;
 }
 
 #Login,
